fix: fix swagger comments
